main.form-section

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <main class="main">
         <section class="form-section">
           <h2 class="title">Handcrafted, home-made masterpieces</h2>
-          <form action="https://www.freecodecamp.com/email-submit" id="form">
+          <form action="https://www.freecodecamp.com/email-submit" id="form" class="form">
             <input
               type="email"
               name="email"
@@ -55,7 +55,7 @@
               placeholder="Enter your email address"
               class="form-input"
             />
-            <input type="submit" value="GET STARTED" id="submit" />
+            <input type="submit" value="GET STARTED" id="submit" class="form-input" />
           </form>
         </section>
 
