position with grid

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <div class="container">
-      <header id="header" class="wrap-header">
+      <header id="header" class="wrap-header flex">
         <div class="header-logo">
           <img
             src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png"
@@ -44,10 +44,10 @@
         </nav>
       </header>
 
-      <main class="main">
+      <main class="main flex">
         <section class="form-section">
           <h2 class="title">Handcrafted, home-made masterpieces</h2>
-          <form action="https://www.freecodecamp.com/email-submit" id="form" class="form">
+          <form action="https://www.freecodecamp.com/email-submit" id="form" class="form flex">
             <input
               type="email"
               name="email"
@@ -145,10 +145,10 @@
           <li class="footer-bar__item">
             <a href="#" class="footer-bar__link">Privacy</a>
           </li>
-          <li>
+          <li class="footer-bar__item">
             <a href="#" class="footer-bar__link">Terms</a>
           </li>
-          <li>
+          <li class="footer-bar__item">
             <a href="#" class="footer-bar__link">Contac</a>
           </li>
         </ul>
