styling section form

--- a/index.html
+++ b/index.html
@@ -53,9 +53,10 @@
               name="email"
               id="email"
               placeholder="Enter your email address"
+              required
               class="form-input"
             />
-            <input type="submit" value="GET STARTED" id="submit" class="form-input" />
+            <input type="submit" value="get started" id="submit" class="btn-submit" />
           </form>
         </section>
 
