styling section wrap-description

--- a/index.html
+++ b/index.html
@@ -60,84 +60,79 @@
           </form>
         </section>
 
-        <section class="wrap-description" id="features">
-          <article class="grid-features">
-            <div class="icon">
-              <i class="fa-solid fa-fire-flame-curved" style="color: #fb8804"></i>
+        <section class="wrap-section">
+          <section class="wrap-description" id="features">
+            <article class="grid-features">
+              <div class="icon">
+                <i class="fa-solid fa-fire-flame-curved fa-2xl" style="color: #fb8804;"></i>
+              </div>
+              <div class="description">
+                <h2 class="title-description">Premium Materials</h2>
+                <p class="paragraph-description">
+                  Our trombones use the shiniest brass which is sourced locally.
+                  This will increase the longevity of your purchase.
+                </p>
+              </div>
+            </article>
+            <article class="grid-features">
+              <div class="icon">
+                <i class="fa-solid fa-truck fa-2xl" style="color: #ff8c00"></i>
+              </div>
+              <div class="description">
+                <h2 class="title-description">Fast Shipping</h2>
+                <p class="paragraph-description">
+                  We make sure you recieve your trombone as soon as we have
+                  finished making it. We also provide free returns if you are not
+                  satisfied.
+                </p>
+              </div>
+            </article>
+            <article class="grid-features">
+              <div class="icon">
+                <i class="fa-solid fa-battery-full fa-2xl" style="color: #ff9600;"></i>
+              </div>
+              <div class="description">
+                <h2 class="title-description">Quality Assurance</h2>
+                <p class="paragraph-description">
+                  For every purchase you make, we will ensure there are no damages
+                  or faults and we will check and test the pitch of your
+                  instrument.
+                </p>
+              </div>
+            </article>
+          </section>
+          <section class="wrap-video" id="how_it_works">
+            <iframe width="540" height="315" src="https://www.youtube.com/embed/y8Yv4pnO7qc?si=yX12vrVhlFwsLxyL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen id="video"></iframe>
+          </section>
+          <section class="wrap-service" id="pricing">
+            <div class="card">
+              <p class="card__product">TENOR TROMBONE</p>
+              <h2 class="card__price">$600</h2>
+              <p>Lorem ipsum.</p>
+              <p>Lorem ipsum.</p>
+              <p>Lorem ipsum dolor.</p>
+              <p>Lorem ipsum.</p>
+              <button type="button" class="btn">SELECT</button>
             </div>
-            <div class="description">
-              <h2 class="title-description">Premium Materials</h2>
-              <p class="paragraph-description">
-                Our trombones use the shiniest brass which is sourced locally.
-                This will increase the longevity of your purchase.
-              </p>
+            <div class="card">
+              <p class="card__product">BASS TROMBONE</p>
+              <h2 class="card__price">$900</h2>
+              <p>Lorem ipsum.</p>
+              <p>Lorem ipsum.</p>
+              <p>Lorem ipsum dolor.</p>
+              <p>Lorem ipsum.</p>
+              <button type="button" class="btn">SELECT</button>
             </div>
-          </article>
-
-          <article class="grid-features">
-            <div class="icon">
-              <i class="fa-solid fa-truck" style="color: #ff8c00"></i>
+            <div class="card">
+              <p class="card__product">VALVE TROMBONE</p>
+              <h2 class="card__price">$1200</h2>
+              <p>Plays similar to a Trumpet</p>
+              <p>Great for Jazz Bands</p>
+              <p>Lorem ipsum dolor.</p>
+              <p>Lorem ipsum.</p>
+              <button type="button" class="btn">SELECT</button>
             </div>
-            <div class="description">
-              <h2 class="title-description">Fast Shipping</h2>
-              <p class="paragraph-description">
-                We make sure you recieve your trombone as soon as we have
-                finished making it. We also provide free returns if you are not
-                satisfied.
-              </p>
-            </div>
-          </article>
-
-          <article class="grid-features">
-            <div class="icon">
-              <i class="fa-solid fa-battery-full" style="color: #ff9600;"></i>
-            </div>
-            <div class="description">
-              <h2 class="title-description">Quality Assurance</h2>
-              <p class="paragraph-description">
-                For every purchase you make, we will ensure there are no damages
-                or faults and we will check and test the pitch of your
-                instrument.
-              </p>
-            </div>
-          </article>
-        </section>
-
-        <section class="wrap-video" id="how_it_works">
-          <iframe width="540" height="315" src="https://www.youtube.com/embed/y8Yv4pnO7qc?si=yX12vrVhlFwsLxyL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen id="video"></iframe>
-        </section>
-
-        <section class="wrap-service" id="pricing">
-          <div class="card">
-            <p class="card__product">TENOR TROMBONE</p>
-            <h2 class="card__price">$600</h2>
-            <p>Lorem ipsum.</p>
-            <p>Lorem ipsum.</p>
-            <p>Lorem ipsum dolor.</p>
-            <p>Lorem ipsum.</p>
-            <button type="button" class="btn">SELECT</button>
-          </div>
-
-          <div class="card">
-            <p class="card__product">BASS TROMBONE</p>
-            <h2 class="card__price">$900</h2>
-            <p>Lorem ipsum.</p>
-            <p>Lorem ipsum.</p>
-            <p>Lorem ipsum dolor.</p>
-            <p>Lorem ipsum.</p>
-            <button type="button" class="btn">SELECT</button>
-          </div>
-
-          <div class="card">
-            <p class="card__product">VALVE TROMBONE</p>
-            <h2 class="card__price">$1200</h2>
-            <p>Plays similar to a Trumpet</p>
-            <p>Great for Jazz Bands</p>
-            <p>Lorem ipsum dolor.</p>
-            <p>Lorem ipsum.</p>
-            <button type="button" class="btn">SELECT</button>
-          </div>
-
+          </section>
         </section>
       </main>
 
