positioning the iframe element

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             </article>
           </section>
           <section class="wrap-video" id="how_it_works">
-            <iframe width="540" height="315" src="https://www.youtube.com/embed/y8Yv4pnO7qc?si=yX12vrVhlFwsLxyL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen id="video"></iframe>
+            <iframe width="540" height="315" src="https://www.youtube.com/embed/y8Yv4pnO7qc?si=yX12vrVhlFwsLxyL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen id="video" class="iframe"></iframe>
           </section>
           <section class="wrap-service" id="pricing">
             <div class="card">
