positioning the price of the product

--- a/index.html
+++ b/index.html
@@ -108,29 +108,29 @@
             <div class="card">
               <p class="card__product">TENOR TROMBONE</p>
               <h2 class="card__price">$600</h2>
-              <p>Lorem ipsum.</p>
-              <p>Lorem ipsum.</p>
-              <p>Lorem ipsum dolor.</p>
-              <p>Lorem ipsum.</p>
-              <button type="button" class="btn">SELECT</button>
+              <p class="lorem-text">Lorem ipsum.</p>
+              <p class="lorem-text">Lorem ipsum.</p>
+              <p class="lorem-text">Lorem ipsum dolor.</p>
+              <p class="lorem-text">Lorem ipsum.</p>
+              <button type="button" class="btn">select</button>
             </div>
             <div class="card">
               <p class="card__product">BASS TROMBONE</p>
               <h2 class="card__price">$900</h2>
-              <p>Lorem ipsum.</p>
-              <p>Lorem ipsum.</p>
-              <p>Lorem ipsum dolor.</p>
-              <p>Lorem ipsum.</p>
-              <button type="button" class="btn">SELECT</button>
+              <p class="lorem-text">Lorem ipsum.</p>
+              <p class="lorem-text">Lorem ipsum.</p>
+              <p class="lorem-text">Lorem ipsum dolor.</p>
+              <p class="lorem-text">Lorem ipsum.</p>
+              <button type="button" class="btn">select</button>
             </div>
             <div class="card">
               <p class="card__product">VALVE TROMBONE</p>
               <h2 class="card__price">$1200</h2>
-              <p>Plays similar to a Trumpet</p>
-              <p>Great for Jazz Bands</p>
-              <p>Lorem ipsum dolor.</p>
-              <p>Lorem ipsum.</p>
-              <button type="button" class="btn">SELECT</button>
+              <p class="lorem-text">Plays similar to a Trumpet</p>
+              <p class="lorem-text">Great for Jazz Bands</p>
+              <p class="lorem-text">Lorem ipsum dolor.</p>
+              <p class="lorem-text">Lorem ipsum.</p>
+              <button type="button" class="btn">select</button>
             </div>
           </section>
         </section>
