--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
           <li class="footer-bar__item">
             <a href="#" class="footer-bar__link">Privacy</a>
           </li>
-          <li>
+          <li class="footer-bar__item">
             <a href="#" class="footer-bar__link">Terms</a>
           </li>
-          <li>
+          <li class="footer-bar__item">
             <a href="#" class="footer-bar__link">Contac</a>
           </li>
         </ul>
